fix(results): fix broken style on results page

--- a/src/components/collection/results/results.scss
+++ b/src/components/collection/results/results.scss
@@ -20,21 +20,29 @@
     max-width: 200px;
     color: white;
     cursor: pointer;
-    padding: 5px;
-    
+
     &__card {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       position: relative;
       width: 100%;
-      height: 240px;
+      height: 220px;
       text-align: center;
       list-style-type: none;
       padding: 0;
       @media (min-width: 768px) {
         height: 200px;
         overflow: hidden;
+        &:hover,
+        &--placeholder {
+          .beer__image {
+            top: -55px;
+          }
+          .beer__cover {
+            overflow: hidden;
+          }
+        }
       }
     }
     &__type {
@@ -51,17 +59,16 @@
       font-weight: bold;
     }
     &__image {
-      max-width: 200px;
-      max-height: 200px;
+      max-width: 180px;
+      max-height: 180px;
       @media (min-width: 768px) {
+        max-width: 200px;
+        max-height: 200px;
+        position: relative;
         top: 0;
         -webkit-transition: top 0.3s ease-in-out;
         -moz-transition: top 0.3s ease-in-out;
         transition: top 0.3s ease-in-out;
-        &:hover,
-        &--placeholder {
-          top: -55px;
-        }
       }
     }
     &__name {
